<resources>
    <string name="app_name">FitPlan</string>
    <string name="permission_required">Permission Required</string>
    <string name="location_permission_is_required_to_continue">Location permission is required to continue.</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="this_action_will_delete_the_plan">This action will delete the plan</string>
    <string name="are_you_sure_you_want_to_delete_the_plan">Are you sure you want to delete the plan?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="plan_deleted">Plan deleted</string>
    <string name="signing_out_don_t_forget">"Signing Out , Don't Forget :\n "</string>
    <string name="no_pain_no_gain">\"NO PAIN NO GAIN!\"</string>
    <string name="reps">"Reps: "</string>
    <string name="this_action_will_delete_the_exercise">This action will delete the exercise</string>
    <string name="are_you_sure_you_want_to_delete_the_exercise">Are you sure you want to delete the exercise?</string>
    <string name="exercise_deleted">Exercise deleted</string>
    <string name="added_to_your_plan">added to your plan</string>
    <string name="minutes">Minutes:</string>
    <string name="seconds">Seconds:</string>
    <string name="plan_must_have_a_title">Plan must have a title</string>
    <string name="plan_saved">Plan saved</string>
    <string name="dumbbell_pullover">Dumbbell Pullover</string>
    <string name="strengthens_chest_shoulders_and_triceps_with_a_classic_dumbbell_exercise">Strengthens chest, shoulders, and triceps with a classic dumbbell exercise.</string>
    <string name="high_cable_crossover">High Cable Crossover</string>
    <string name="targets_chest_and_back_muscles_using_cable_equipment">Targets chest and back muscles using cable equipment.</string>
    <string name="incline_chest_fly_machine">Incline Chest Fly Machine</string>
    <string name="targets_upper_chest_muscles_with_machine_assistance">Targets upper chest muscles with machine assistance.</string>
    <string name="low_cable_crossover">Low Cable Crossover</string>
    <string name="focuses_on_lower_chest_muscles_using_cable_equipment">Focuses on lower chest muscles using cable equipment.</string>
    <string name="bench_press">Bench Press</string>
    <string name="strengthens_chest_muscles_using_a_barbell_on_a_bench">Strengthens chest muscles using a barbell on a bench.</string>
    <string name="smith_machine_behind_neck_press">Smith Machine Behind Neck Press</string>
    <string name="smith_machine_behind_neck_presses_target_the_deltoids_and_upper_chest">Smith Machine Behind Neck Presses target the deltoids and upper chest.</string>
    <string name="standing_dumbbell_overhead_press">Standing Dumbbell Overhead Press</string>
    <string name="standing_dumbbell_overhead_presses_target_the_deltoids_and_triceps">Standing Dumbbell Overhead Presses target the deltoids and triceps.</string>
    <string name="cable_rear_pulldown">Cable Rear Pulldown</string>
    <string name="strengthens_back_muscles_using_cable_equipment">Strengthens back muscles using cable equipment.</string>
    <string name="front_pulldown">Front Pulldown</string>
    <string name="targets_back_legs_and_core_with_a_compound_exercise">Targets back, legs, and core with a compound exercise.</string>
    <string name="lever_t_bar_row">Lever T-Bar Row</string>
    <string name="works_back_muscles_with_a_t_bar_and_lever_system">Works back muscles with a T-bar and lever system.</string>
    <string name="pull_up">Pull Up</string>
    <string name="strengthens_back_muscles_with_a_bodyweight_movement">Strengthens back muscles with a bodyweight movement.</string>
    <string name="rope_climb">Rope Climb</string>
    <string name="builds_upper_body_strength_with_a_climbing_motion">Builds upper body strength with a climbing motion.</string>
    <string name="rowing_machine">Rowing Machine</string>
    <string name="simulates_rowing_for_a_full_body_workout">Simulates rowing for a full-body workout.</string>
    <string name="seated_cable_row">Seated Cable Row</string>
    <string name="targets_mid_back_muscles_using_a_cable_machine">Targets mid-back muscles using a cable machine.</string>
    <string name="double_arm_dumbbell_curl">Double Arm Dumbbell Curl</string>
    <string name="strengthens_biceps_using_dumbbells">Strengthens biceps using dumbbells.</string>
    <string name="dumbbell_curl">Dumbbell Curl</string>
    <string name="isolation_exercise_for_biceps_with_dumbbells">Isolation exercise for biceps with dumbbells.</string>
    <string name="seated_zottman_curl">Seated Zottman Curl</string>
    <string name="targets_biceps_and_forearms_with_a_seated_position">Targets biceps and forearms with a seated position.</string>
    <string name="standing_barbell_concentration_curl">Standing Barbell Concentration Curl</string>
    <string name="focuses_on_biceps_using_a_barbell_and_concentration">Focuses on biceps using a barbell and concentration.</string>
    <string name="waiter_curl">Waiter Curl</string>
    <string name="works_biceps_and_forearms_with_a_single_arm_movement">Works biceps and forearms with a single-arm movement.</string>
    <string name="dumbbell_kickback">Dumbbell Kickback</string>
    <string name="dumbbell_kickbacks_are_an_isolation_exercise_that_targets_the_triceps">Dumbbell Kickbacks are an isolation exercise that targets the triceps.</string>
    <string name="one_arm_reverse_push_down">One Arm Reverse Push Down</string>
    <string name="one_arm_reverse_push_downs_are_a_unilateral_exercise_for_targeting_the_triceps">One Arm Reverse Push Downs are a unilateral exercise for targeting the triceps.</string>
    <string name="one_arm_triceps_pushdown">One Arm Triceps Pushdown</string>
    <string name="one_arm_triceps_pushdowns_are_a_unilateral_exercise_that_isolates_the_triceps">One Arm Triceps Pushdowns are a unilateral exercise that isolates the triceps.</string>
    <string name="dumbbell_lateral_raise">Dumbbell Lateral Raise</string>
    <string name="dumbbell_lateral_raises_target_the_lateral_deltoid_and_help_build_shoulder_width">Dumbbell Lateral Raises target the lateral deltoid and help build shoulder width.</string>
    <string name="dumbbell_shoulder_press">Dumbbell Shoulder Press</string>
    <string name="dumbbell_shoulder_presses_are_a_compound_exercise_that_primarily_targets_the_deltoids">Dumbbell Shoulder Presses are a compound exercise that primarily targets the deltoids.</string>
    <string name="depth_jump_to_hurdle_hop">Depth Jump To Hurdle Hop</string>
    <string name="engages_leg_muscles_with_a_dynamic_plyometric_exercise">Engages leg muscles with a dynamic plyometric exercise.</string>
    <string name="dumbbell_lunges">Dumbbell Lunges</string>
    <string name="dumbbell_lunges_are_a_unilateral_leg_exercise_that_targets_the_quadriceps_hamstrings_and_glutes">Dumbbell Lunges are a unilateral leg exercise that targets the quadriceps, hamstrings, and glutes.</string>
    <string name="high_knee_lunge_on_bosu_ball">High Knee Lunge on Bosu Ball</string>
    <string name="high_knee_lunges_on_a_bosu_ball_challenge_balance_and_engage_leg_muscles">High Knee Lunges on a Bosu Ball challenge balance and engage leg muscles.</string>
    <string name="standing_leg_circles">Standing Leg Circles</string>
    <string name="standing_leg_circles_are_a_dynamic_stretching_exercise_for_the_lower_body">Standing Leg Circles are a dynamic stretching exercise for the lower body.</string>
    <string name="ab_coaster_machine">Ab Coaster Machine</string>
    <string name="strengthens_core_muscles_with_the_ab_coaster_machine_exercise">Strengthens core muscles with the Ab Coaster Machine exercise.</string>
    <string name="alternate_leg_raises">Alternate Leg Raises</string>
    <string name="targets_abdominals_and_hip_flexors_with_alternating_leg_raises">Targets abdominals and hip flexors with alternating leg raises.</string>
    <string name="crunch">Crunch</string>
    <string name="crunches_are_a_fundamental_abdominal_exercise_that_focuses_on_the_rectus_abdominis">Crunches are a fundamental abdominal exercise that focuses on the rectus abdominis.</string>
    <string name="leg_raise_dragon_flag">Leg Raise (Dragon Flag)</string>
    <string name="the_leg_raise_also_known_as_the_dragon_flag_is_an_advanced_abdominal_exercise_that_targets_the_entire_core">The Leg Raise, also known as the Dragon Flag, is an advanced abdominal exercise that targets the entire core.</string>
    <string name="seated_bench_leg_pull_in">Seated Bench Leg Pull In</string>
    <string name="seated_bench_leg_pull_ins_are_an_effective_exercise_for_targeting_the_lower_abdominals">Seated Bench Leg Pull Ins are an effective exercise for targeting the lower abdominals.</string>
    <string name="briskly_walking">Briskly Walking</string>
    <string name="strengthens_core_muscles_with_brisk_walking">Strengthens core muscles with brisk walking.</string>
    <string name="burpees">Burpees</string>
    <string name="targets_abdominals_and_hip_flexors_with_burpees">Targets abdominals and hip flexors with burpees.</string>
    <string name="high_knee_skips">High Knee Skips</string>
    <string name="high_knee_skips_are_a_cardiovascular_exercise_focusing_on_the_rectus_abdominis">High knee skips are a cardiovascular exercise focusing on the rectus abdominis.</string>
    <string name="jump_squat">Jump Squat</string>
    <string name="jump_squats_target_the_entire_core_while_engaging_leg_muscles">Jump squats target the entire core while engaging leg muscles.</string>
    <string name="mountain_climber">Mountain Climber</string>
    <string name="mountain_climbers_engage_the_core_and_provide_a_cardio_workout">Mountain climbers engage the core and provide a cardio workout.</string>
    <string name="run">Run</string>
    <string name="running_engages_the_entire_body_including_the_core_muscles">Running engages the entire body including the core muscles.</string>
    <string name="skater">Skater</string>
    <string name="skaters_engage_the_core_muscles_while_providing_a_cardio_workout">Skaters engage the core muscles while providing a cardio workout.</string>
    <string name="walking">Walking</string>
    <string name="walking_is_a_low_impact_exercise_that_strengthens_core_muscles">Walking is a low-impact exercise that strengthens core muscles.</string>
    <string name="create_new_plan">Create new plan!</string>
    <string name="enter_title">Enter title</string>
    <string name="enter_descreption">Enter descreption</string>
    <string name="choose_image">Choose image</string>
    <string name="save">Save</string>
    <string name="choose_plan">Choose Plan</string>
    <string name="login_to_fitplan">Login To FitPlan</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="back">Back</string>
    <string name="chest">Chest</string>
    <string name="abs">ABS</string>
    <string name="legs">Legs</string>
    <string name="cardio">Cardio</string>
    <string name="save_plan">Save plan!</string>
    <string name="register_to_fitplan">Register To FitPlan</string>
    <string name="enter_user_name">Enter user name</string>
    <string name="welcome_to_fitrun">Welcome To FitRun</string>
    <string name="time">TIME</string>
    <string name="km">KM</string>
    <string name="km_m">KM/m</string>
    <string name="your_distance_0">Your Distance : 0</string>
    <string name="km_for_minute_0">Km For Minute : 0</string>
    <string name="your_time_00_00_00">Your time : 00:00:00</string>
    <string name="are_you_sure_you_want_sign_out">Are you sure you want sign-out?</string>
    <string name="checkout_other_people_s_plans">Checkout other people\'s plans!</string>
    <string name="backMuscle">Back</string>
</resources>