<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".UI.login_register.LoginFragment"
    android:gravity="center"
    android:paddingBottom="50dp"
    android:background="@drawable/background"
    android:orientation="vertical">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_to_fitplan"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:padding="30dp"
        android:textStyle="bold"/>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/LoginInputText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="10dp"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/user_check_alt_svgrepo_com"
        app:endIconTint="@color/white"
        android:textColorHint="@color/white"
        android:id="@+id/emailTextInput">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:maxLines="1"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:hint="@string/enter_email" />
    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout
        style="@style/LoginInputText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="10dp"
        android:textColorHint="@color/white"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/password_svgrepo_com"
        app:endIconTint="@color/white"
        app:helperText = "login fail"
        app:helperTextTextColor="@color/red"
        android:id="@+id/passwordTextInput">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:maxLines="1"
            android:inputType="textPassword"
            android:hint="@string/enter_password" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:backgroundTint="@color/gray"
            android:text="@string/login"/>
        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/register_btn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:backgroundTint="@color/green"
            android:text="@string/register"/>



    </LinearLayout>

    <ProgressBar
        android:id="@+id/loginProgress"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />




</LinearLayout>