<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="false"
    android:background="@color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".UI.run.RunSaveDetails">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="visible" />

        <com.google.android.gms.maps.MapView
            android:id="@+id/mapView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:apiKey="YOUR_API_KEY" />

        <TextView
            android:id="@+id/distance_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_distance_0"
            android:textSize="20sp"
            android:padding="16dp"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/km_m_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textColor="@color/white"
            android:text="@string/km_for_minute_0"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/time_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/your_time_00_00_00"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/cancel_run_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/green"
            android:text="Ok"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>
